# Sara

./: .gitattributes  .gitignore  Cargo.toml  README.md  SMOKE_TEST.md
.github/workflows/: auto-tag.yml  release.yml
src/: capture.rs  cli.rs  completion.rs  config.rs  dates.rs  db.rs  embed.rs  enrich.rs  files.rs  git.rs  learn.rs  main.rs  model.rs  portable.rs  project.rs  vault.rs
src/commands/: activity.rs  add.rs  annotate.rs  board.rs  branch.rs  brief.rs  delete.rs  dep.rs  done.rs  export.rs  guide.rs  import.rs  info.rs  init.rs  item.rs  learn_cmd.rs  list.rs  mod.rs  modify.rs  move_task.rs  plan.rs  provider.rs  recall.rs  refine.rs  reset.rs  search.rs  sync.rs  timer.rs  undo.rs
src/llm/: anthropic.rs  azure.rs  mlx.rs  mod.rs  ollama.rs  openai.rs
src/tui/: fzf.rs  mod.rs  review_form.rs
src/tui/snapshots/: review_form_llm_status.txt  review_form_normal.txt  review_form_small.txt
