[package]
name = "sara"
version = "0.1.0"
edition = "2024"
description = "Sara — folder-aware task manager (successor to tk)"
license = "MIT"

[[bin]]
name = "sara"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
ignore = "0.4"
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["crossterm"] }
indicatif = "0.17"
directories = "5"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
nucleo-matcher = "0.3"
interim = { version = "0.1", features = ["chrono"] }
