[package]
# Crate name on crates.io. `sara` and `sara-cli` are already taken, so the
# published crate is `sara-tasks` while the installed binary stays `sara`
# (see [[bin]] below).
name = "sara-tasks"
version = "0.1.0"
edition = "2024"
description = "Sara — folder-aware task manager (successor to tk)"
license = "MIT"
authors = ["Andreas Barbesgaard"]
repository = "https://github.com/Abarbesgaard/Sara"
homepage = "https://github.com/Abarbesgaard/Sara"
readme = "README.md"
keywords = ["task", "cli", "tui", "productivity", "todo"]
categories = ["command-line-utilities"]

[[bin]]
name = "sara"
path = "src/main.rs"

# ── Debian packaging (cargo-deb) ─────────────────────────────────────────────
# Build with: cargo deb --target <triple>
[package.metadata.deb]
# Debian package name stays `sara` (crate is `sara-cli`) so `apt install sara` works.
name = "sara"
maintainer = "Andreas Barbesgaard <Abarbesgaard@users.noreply.github.com>"
copyright = "2026, Andreas Barbesgaard"
license-file = ["LICENSE", "0"]
extended-description = """
Sara is a folder-aware task manager. A git repository is treated as a project,
so tasks live alongside the code they belong to. Features include dependency
chains, a TUI board, time tracking, and an AI-assisted task guide."""
section = "utils"
priority = "optional"
assets = [
    ["target/release/sara", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/sara/README.md", "644"],
]

[dependencies]
clap = { version = "4", features = ["derive", "unstable-ext"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
ignore = "0.4"
ratatui = "0.29"
crossterm = "0.28"
tui-textarea = { version = "0.7", features = ["crossterm"] }
indicatif = "0.17"
directories = "5"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
toml = "0.8"
nucleo-matcher = "0.3"
interim = { version = "0.1", features = ["chrono"] }
base64 = "0.22"
